// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component]: Input render component 1`] = `
<DocumentFragment>
  <div
    class="sc-dIUggk iHVxPp"
  >
    <label
      class="sc-hBEYos iAuSGj"
    />
    <input
      class="sc-hHftDr bLeiXC"
      value=""
    />
    <span
      class="sc-dmlrTW hUPWZa"
    />
  </div>
</DocumentFragment>
`;

exports[`[Component]: Input render component with error style 1`] = `
<DocumentFragment>
  <div
    class="sc-dIUggk iHVxPp"
  >
    <label
      class="sc-hBEYos iAuSGj"
    />
    <input
      class="sc-hHftDr jUBjGk"
      value=""
    />
    <span
      class="sc-dmlrTW jWGFma"
    >
      Help message
    </span>
  </div>
</DocumentFragment>
`;
